refactor the MusicPlayer from jlayer to javafx.media

--- a/pom.xml
+++ b/pom.xml
@@ -57,13 +57,6 @@
             <version>20.0.2</version>
         </dependency>
 
-        <!-- JLayer for MP3 playback -->
-        <dependency>
-            <groupId>com.googlecode.soundlibs</groupId>
-            <artifactId>jlayer</artifactId>
-            <version>1.0.1.4</version>
-        </dependency>
-
 
     </dependencies>
 
@@ -91,7 +84,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.megasnake.MainApp</mainClass>
+                            <mainClass>com.megasnake/com.megasnake.MainApp</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
