Now the background theme can be changed by clicking the button on the right side of the screen.

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,25 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>io.github.fvarrui</groupId>
+                <artifactId>javapackager</artifactId>
+                <version>1.7.5</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>package</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.megasnake.MainApp</mainClass>
+                            <bundleJre>true</bundleJre>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
         </plugins>
     </build>
 
